--- a/work.html
+++ b/work.html
@@ -111,6 +111,6 @@
   <footer id="main-footer">
     Copyroght &copy; 2018
   </footer>
-  <script src="../js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
